<resources>
    <string name="app_name">EatOutApp</string>
    <string name="permission_location_rejected">We can\'t show you the nearby restaurants if you don\'t give us permission to access the location of your device.</string>
    <string name="permission_phone_call_rejected">We can\'t make the phone call because you rejected the permission.</string>
    <string name="ImagePoster">Here goes the picture of the restaurant</string>
    <string name="stNearYou">Near you...</string>
    <string name="searchList">searcList</string>
    <string name="restaurant">restaurant</string>
    <string name="address">Address:</string>
    <string name="placeIdField">placeId</string>
    <string name="latLongField">latLong</string>
    <string name="restaurantNameField">restaurantName</string>
    <string name="reservationDateField">reservationDate</string>
    <string name="observationsField">observations</string>
    <string name="streetAddressField">streetAddress</string>
    <string name="phoneNumberField">phoneNumber</string>
    <string name="select_date_time">Click on calendar image to select the date and time of the reservation</string>
    <string name="DateAndTimeOfTheReservation">Date and time of the reservation:</string>
    <string name="Observations">Observations:</string>
    <string name="action_settings">Settings</string>
    <string name="action_credits">Credits</string>
    <string name="cancel_reservation">Cancel reservation</string>
    <string name="restaurantReservations" translatable="false">restaurantReservations</string>
    <string name="placeId" translatable="false">placeId</string>
    <string name="cancelReservationConfirmation">Do you really want to cancel the reservation?</string>
    <string name="confirmation">Confirmation</string>
    <string name="see_observations">See observations</string>
    <string name="locate_in_map">Map</string>
    <string name="reservations_ahead">Reservations List</string>
    <string name="title_activity_maps">Map</string>
    <string name="latitude">latitude</string>
    <string name="longitude">longitude</string>
    <string name="restaurantName">restaurantName</string>
    <string name="turn_to_map_view">Map view</string>
    <string name="map_in_st_view_mode" translatable="false">map_in_st_view_mode</string>
    <string name="turn_to_st_view">Keep pressing a point in the map to see street view</string>
    <string name="restaurants_per_request">Maximum number of restaurants per request</string>
    <string name="number_options_request" translatable="false">number_options_request</string>
    <string name="data_date_reservation_compulsory">You must introuduce the date and time of the reservation!</string>
    <string name="st_Observations" translatable="false">observations</string>
    <string name="st_save">Save</string>
    <string name="st_restaurantImage">Restaurant image</string>
    <string name="st_make_a_call">Make a call to the restaurant</string>
    <string name="st_internet_needed">Internet conectivity is required to use this function</string>

    <string name="appwidget_text">Number of reservations ahead</string>
    <string name="add_widget">Add widget</string>
    <string name="instructions">Write down the name of a city if you want a list of restarurants from that city.\n\n\nClick on the button down below if you want a list of restaurants near you. </string>
    <string name="no_results">Sorry, goggle didn\'t find any matches for your selection. Please try a different city.</string>
    <string name="no_reservations">You have no reservations ahead at this moment.</string>
    <string name="current_date_after_date_selected">The selected date and time must be after the current date and time. Please enter a valid date and time.</string>
    <string name="active_page_tab" translatable="false">active_page_tab</string>
    <string name="google_powered">Powered by google</string>
    <string name="icon_attribution">Icon attribution</string>
    <string name="reservations_number">Number of reservations ahead</string>
</resources>
