<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/cl"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="@dimen/margin_small"
    android:layout_marginEnd="@dimen/margin_small"
    tools:context="com.rizosoft.eatoutapp.MainActivity">

    <android.support.v7.widget.CardView
        android:id="@+id/cardAutoComplete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_marginBottom="@dimen/margin_medium">

        <fragment
            android:id="@+id/autocomplete_fragment"
            android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </android.support.v7.widget.CardView>
    <ImageView
        android:id="@+id/imGoogle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/powered_by_google_light"
        app:layout_constraintTop_toBottomOf="@+id/cardAutoComplete"
        android:contentDescription="@string/google_powered"
        />

    <ProgressBar
        android:id="@+id/bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/imGoogle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/imGoogle"
        android:gravity="center_horizontal"
        >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:singleLine="false"

        android:layout_marginTop="35dp"
        android:layout_marginStart="35dp"
        android:maxWidth="300dp"

        android:textStyle="bold"
        android:text="@string/instructions"
        tools:text="@string/instructions"
        />

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/btNearby"
        android:layout_width="56dp"
        android:layout_height="56dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:elevation="4dp"
        app:fabSize="mini"
        android:src="@drawable/near"
        android:contentDescription="@string/stNearYou"
        />


</android.support.constraint.ConstraintLayout>
